# DreamCoast

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md
apps/sandbox/: Cargo.toml
apps/sandbox/config/: scalability.ron
apps/sandbox/levels/: ao_debug.level  demo.world  gallery.level  lanterns.level  sponza.level  sponza_hero.level  sponza_intel.level  sponza_intel_chromeball.level  sponza_intel_glossyball.level  sponza_intel_knight.level  sponza_knight.level  sponza_trees.level
apps/sandbox/src/: app.rs  atmosphere.rs  camera.rs  character.rs  clipmap.rs  cluster.rs  compose.rs  cook_progress.rs  csm.rs  cull.rs  deferred.rs  deform.rs  fuse.rs  gdf.rs  gi.rs  gtao.rs  hzb.rs  ibl.rs  level.rs  loading.rs  main.rs  mesh.rs  mesh_sdf.rs  morph.rs  particle.rs  postfx.rs  push.rs  quality.rs  reflect.rs  registry.rs  rhi_thread.rs  rt.rs  skin.rs  smoketest.rs  taau.rs  translucent.rs  velocity.rs  vgeo.rs  view.rs  world.rs
crates/asset/: Cargo.toml
crates/asset/examples/: abc_probe.rs  fbx_probe.rs  usd_probe.rs
crates/asset/src/: alembic.rs  bc.rs  cook.rs  dcasset.rs  fbx.rs  gltf_scene.rs  level.rs  level_graph.rs  lib.rs  primitives.rs  sdf.rs  sdf_atlas.rs  simplify.rs  usd.rs  vcache.rs  vgeo.rs
crates/asset/src/bc/: bc7.rs  dxt.rs  mod.rs
crates/asset/src/cook/: level.rs  mod.rs  scene.rs  texture.rs
crates/asset/src/dcasset/: cluster.rs  gltf.rs  level.rs  mesh.rs  mod.rs  vcache.rs  volume.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  pool.rs
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: deque.rs  graph.rs  lib.rs  scheduler.rs
crates/platform/: Cargo.toml
crates/platform/src/: input.rs  lib.rs  window.rs  window_macos.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/rhi/: Cargo.toml
crates/rhi-d3d12/: Cargo.toml
crates/rhi-d3d12/src/: accel.rs  buffer.rs  command.rs  cubemap.rs  depth.rs  device.rs  instance.rs  lib.rs  pipeline.rs  query.rs  render_target.rs  rt_pipeline.rs  swapchain.rs  sync.rs  texture.rs  volume.rs
crates/rhi-metal/: Cargo.toml
crates/rhi-metal/src/: accel.rs  command.rs  device.rs  lib.rs  pipeline.rs  query.rs  resources.rs  rt_pipeline.rs  swapchain.rs  sync.rs
crates/rhi-types/: Cargo.toml
crates/rhi-types/src/: lib.rs
crates/rhi-vulkan/: Cargo.toml
crates/rhi-vulkan/src/: accel.rs  buffer.rs  command.rs  cubemap.rs  depth.rs  device.rs  instance.rs  lib.rs  pipeline.rs  query.rs  render_target.rs  rt_pipeline.rs  swapchain.rs  sync.rs  texture.rs  volume.rs
crates/rhi/src/: command_list.rs  lib.rs
crates/scene/: Cargo.toml
crates/scene/src/: animation.rs  components.rs  draw_list.rs  ecs.rs  gltf_instance.rs  lib.rs  node.rs  schedule.rs  transform.rs
crates/shader/: Cargo.toml  build.rs
crates/shader/shaders/: aces.slang  atmosphere.slang  auto_exposure.slang  bindless.slang  bloom.slang  blur.slang  brdf.slang  capture.slang  clipmap.slang  cull.slang  cull_draw.slang  dof.slang  fxaa.slang  gbuffer.slang  gdf_ao.slang  gdf_atrous.slang  gdf_bounce.slang  gdf_gi.slang  gdf_gi_upsample.slang  gdf_merge.slang  gdf_reflect.slang  gdf_skyvis.slang  gdf_skyvis_denoise.slang  gdf_temporal.slang  gdf_trace.slang  gi_volume.slang  gtao.slang  hzb_build.slang  hzb_copy_vis.slang  hzb_test.slang  imgui.slang  irradiance.slang  light_cluster.slang  light_cluster_common.slang  lit_history.slang  loading.slang  mesh.slang  mesh_sdf_sample.slang  motion_blur.slang  octahedral.slang  (+59 more)
crates/shader/src/: lib.rs
docs/: ROADMAP.md  alembic-usd-import.md  animation.md  ao-skylight-bent-normal.md  ao-skylight-handoff.md  async-compute.md  atmosphere-fog-slot.md  clustered-lighting.md  cold-start-lossless-opt.md  commercial-engine-gap-analysis.md  cull-lod-design.md  deferred-decals.md  deform-runtime-perf-level.md  depth-prepass.md  foliage.md  gdf-reference-alignment.md  gdf-shading-stability.md  gdf-ue-alignment.md  gi-fidelity-perf-measure.md  gi-fidelity-phases.md  gi-fidelity-roadmap.md  gi-radiance-cache.md  gi-visualization.md  golden-image-regression.md  hzb-occlusion-culling.md  loading-screen-thread.md  lossless-opt-ledger.md  lossless-opt-plans.md  lumen-parity-swrt.md  mac-verify-a2a3-convergence-fix.md  macos-perf-plan.md  material-assets.md  metal-backend.md  metal-shimmer-reference.md  per-mesh-distance-fields.md  per-mesh-sdf-direct-sample-plan.md  phase-0-foundations.md  phase-1-rhi-vulkan.md  phase-10-distance-field-gi.md  phase-10-virtual-geometry.md  (+91 more)
tools/: README.md  build-dxc.sh  build-renderdoc-py312.ps1  crop-luma.py  fetch-assets.ps1  fetch-assets.sh  fetch-sponza.ps1  fetch-sponza.sh  fetch-vulkan-layers.py  golden-image.py  renderdoc-mcp-launch.ps1  rt-compare.py  run-sponza-fly.ps1  setup-renderdoc-mcp.ps1  verify-rhi-thread.ps1
tools/goldens/: .gitignore  manifest.json
