[package]
name = "sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
engine-core.workspace = true
engine-platform.workspace = true
engine-shader.workspace = true
engine-gui.workspace = true
engine-asset.workspace = true
rhi.workspace = true
anyhow.workspace = true
tracing.workspace = true
