[package]
name = "sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dreamcoast-core.workspace = true
dreamcoast-platform.workspace = true
dreamcoast-shader.workspace = true
dreamcoast-gui.workspace = true
dreamcoast-asset.workspace = true
dreamcoast-render.workspace = true
rhi.workspace = true
anyhow.workspace = true
tracing.workspace = true
image.workspace = true
