[package]
name = "sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dreamcoast-core.workspace = true
dreamcoast-jobs.workspace = true
dreamcoast-platform.workspace = true
dreamcoast-shader.workspace = true
dreamcoast-gui.workspace = true
dreamcoast-asset.workspace = true
dreamcoast-render.workspace = true
dreamcoast-scene.workspace = true
rhi.workspace = true
anyhow.workspace = true
tracing.workspace = true
image.workspace = true
# Data-driven scalability tier tables (apps/sandbox/config/scalability.ron): parsed at
# startup with an embedded (include_str!) fallback. Same RON stack the .level loader uses.
serde.workspace = true
ron.workspace = true

# Debug-only: in-app RenderDoc frame-capture trigger (RDOC_CAPTURE=1, run under
# `renderdoccmd capture`). Loads the injected RenderDoc module at runtime; a no-op
# (RenderDoc::new() → Err → None) when not running under RenderDoc.
[target.'cfg(windows)'.dependencies]
renderdoc = "0.12"
