[package]
name = "engine-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
engine-core.workspace = true
tracing.workspace = true

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
]
