[package]
name = "dreamcoast-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
dreamcoast-core.workspace = true
tracing.workspace = true

# Win32 windowing (Windows only).
[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
]

# Cocoa/AppKit windowing + CAMetalLayer (macOS only).
[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-foundation.workspace = true
objc2-app-kit.workspace = true
objc2-quartz-core.workspace = true
