[package]
name = "rhi-d3d12"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rhi-types.workspace = true
engine-core.workspace = true
engine-platform.workspace = true
tracing.workspace = true

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Threading",
]
