[package]
name = "rhi-d3d12"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rhi-types.workspace = true
dreamcoast-core.workspace = true
dreamcoast-platform.workspace = true
tracing.workspace = true

# Direct3D 12 is Windows-only; the crate body is empty on other targets (see
# `#![cfg(windows)]` in src/lib.rs) so the workspace still builds on macOS.
[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Threading",
]
