[package]
name = "rhi-vulkan"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rhi-types.workspace = true
engine-core.workspace = true
engine-platform.workspace = true
ash.workspace = true
tracing.workspace = true

[dependencies.windows]
workspace = true
features = ["Win32_Foundation"]
