[package]
name = "rhi-vulkan"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rhi-types.workspace = true
dreamcoast-core.workspace = true
dreamcoast-platform.workspace = true
tracing.workspace = true

# This Vulkan backend targets the Win32 surface (WSI), so it is Windows-only for
# now; the crate body is empty on other targets (see `#![cfg(windows)]` in
# src/lib.rs) so the workspace still builds on macOS.
[target.'cfg(windows)'.dependencies]
ash.workspace = true

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = ["Win32_Foundation"]
